# neo4j-mcp-workspace-template

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  README.md  TASKS.md  generate-mermaid-diagrams.sh  pyproject.toml  setup.sh  test-prompt-csv-and-pdf.txt  test-prompt-structured.txt  test-prompt.txt
.agents/skills/develop-neo4j-graph/: SKILL.md
.agents/skills/develop-neo4j-graph/references/: ANALYTICAL_MODE.md  CHATBOT_MODE.md  DOCLING_MODE.md  HANDLE_STRUCTURED_DATA.md  PAGE_IMAGE_MODE.md
.claude/commands/: build-pdf-chatbot.md  develop-neo4j-graph.md  setup-workspace.md
.claude/commands/dev/: evaluate-pipeline.md
.claude/skills/: develop-neo4j-graph
.claude/skills/dev/evaluate-pipeline/: SKILL.md
.claude/skills/develop-neo4j-graph/: SKILL.md
.claude/skills/develop-neo4j-graph/references/: DOCLING_MODE.md  GRAPH_DATA_MODELING_MCP.md  HANDLE_UNSTRUCTURED_DATA.md  PYMUPDF_MODE.md  VLM_BLOCKS_MODE.md
.claude/skills/setup-workspace/: SKILL.md
.cursor/: mcp.json.example
.cursor/rules/: project-workflow.mdc
.cursor/skills/develop-neo4j-graph/: SKILL.md
.cursor/skills/develop-neo4j-graph/references/: GRAPH_DATA_MODELING_MCP.md  HANDLE_STRUCTURED_DATA.md  HANDLE_UNSTRUCTURED_DATA.md
.cursor/skills/evaluate-pipeline/: SKILL.md
.cursor/skills/setup-workspace/: SKILL.md
.github/: copilot-instructions.md
.github/workflows/: publish-mcp-neo4j-entity-graph.yml  publish-mcp-neo4j-ingest.yml  publish-mcp-neo4j-lexical-graph.yml  publish-mcp-neo4j-proxy.yml
.opencode/agents/: develop-neo4j-graph.md
assets/mermaid/architecture/: dev-cycle-overview.mmd
assets/mermaid/data_models/: lexical-data-model.mmd
data/: README.md
data_models/: README.md
docs/: CLAUDE_DESKTOP.md
ingest_server/: server.py
mcp-neo4j-advanced-lexical-graph/: pyproject.toml
mcp-neo4j-entity-graph/: README.md  pyproject.toml
mcp-neo4j-entity-graph/docs/: ONTOLOGY_DB_SCHEMA.md
mcp-neo4j-entity-graph/examples/: README.md  legal_ontology.cypher  validate.py
mcp-neo4j-entity-graph/src/mcp_neo4j_entity_graph/: __init__.py  base_extractor.py  extractor.py  job_manager.py  models.py  normalizer_runtime.py  normalizer_templates.py  ontology_loader.py  schema_generator.py  server.py  text_extractor.py  vlm_extractor.py
mcp-neo4j-ingest/: README.md  pyproject.toml
mcp-neo4j-ingest/src/mcp_neo4j_ingest/: server.py
mcp-neo4j-lexical-graph/: README.md  pyproject.toml
mcp-neo4j-lexical-graph-legacy/: pyproject.toml
mcp-neo4j-lexical-graph/docs/: tools-chunking.md  tools-embedding.md  tools-graph-creation.md  tools-postprocessing.md  tools-verification.md  tools-version-management.md
mcp-neo4j-lexical-graph/src/mcp_neo4j_lexical_graph/: __init__.py  chunker.py  embedder.py  graph_reader.py  graph_writer.py  job_manager.py  models.py  server.py  worker.py
mcp-neo4j-lexical-graph/src/mcp_neo4j_lexical_graph/chunkers/: __init__.py  base.py  by_page.py  by_section.py  structured.py  token_window.py
mcp-neo4j-lexical-graph/src/mcp_neo4j_lexical_graph/parsers/: __init__.py  base.py  docling_parser.py  page_image.py  text_only.py  vlm_blocks.py
mcp-neo4j-lexical-graph/src/mcp_neo4j_lexical_graph/postprocessing/: __init__.py  description_generator.py  section_hierarchy.py
mcp-neo4j-proxy/: manifest.json  pyproject.toml
mcp-neo4j-proxy/src/mcp_neo4j_proxy/: server.py
neo4j-mcp-workspace-dxt/: manifest.json  server.py
neo4j-workspace-dxt/: manifest.json
skills/: README.md
skills/build-ontology-driven-graph/: SKILL.md
skills/build-ontology-driven-graph/references/: bloom-explore-tour.md  common-pitfalls.md  domain-question-templates.md  lexical-graph-pipeline.md  ontology-db-schema.md  ontology-design-checklist.md  tool-decision-guide.md
skills/build-ontology-driven-graph/scripts/: validate_ontology.cypher
