[project]
name = "neo4j-mcp-workspace-template"
version = "0.1.0"
description = "A template for end to end Neo4j graph development using MCP"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.13.1",
    "mcp-neo4j-cypher>=0.5.1",
    "neo4j>=6.0.3",
    "pandas>=2.3.3",
]
