[project]
name = "neo4j-mcp-workspace-template"
version = "0.1.0"
description = "A template for end to end Neo4j graph development using MCP"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.84.0",
    "dotenv>=0.9.9",
    "neo4j>=6.0.3",
    "openai>=2.26.0",
    "pandas>=2.3.3",
    "python-dotenv>=1.0.0",
]
