[project]
name = "mcp-neo4j-advanced-lexical-graph"
version = "0.1.0"
description = "Advanced MCP server for creating rich lexical graphs from complex PDFs in Neo4j. Supports VLM-based layout analysis, hierarchical sections, figures, tables, and section-based RAG chunks."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["neo4j", "mcp", "pdf", "lexical-graph", "rag", "embeddings", "litellm", "vector-search", "vlm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastmcp>=2.3.0",
    "neo4j>=5.0.0",
    "litellm>=1.0.0,!=1.82.7,!=1.82.8",
    "pymupdf>=1.24.0",
    "tiktoken>=0.7.0",
    "pydantic>=2.0.0",
    "structlog>=24.0.0",
    "Pillow>=10.0.0",
]

[project.urls]
Homepage = "https://github.com/neo4j-field/neo4j-mcp-workspace-template"
Documentation = "https://github.com/neo4j-field/neo4j-mcp-workspace-template#readme"
Repository = "https://github.com/neo4j-field/neo4j-mcp-workspace-template"

[project.scripts]
mcp-neo4j-advanced-lexical-graph = "mcp_neo4j_advanced_lexical_graph:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_neo4j_advanced_lexical_graph"]
