[project]
name = "mcp-neo4j-entity-graph"
version = "0.1.0"
description = "MCP server for extracting entities from text chunks and creating entity graphs in Neo4j"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0.0",
    "neo4j>=5.0.0",
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "structlog>=24.0.0",
]

[project.scripts]
mcp-neo4j-entity-graph = "mcp_neo4j_entity_graph:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_neo4j_entity_graph"]

