[project]
name = "mcp-neo4j-ingest"
version = "0.1.0"
description = "Structured data ingestion MCP server for Neo4j"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.13.1",
    "mcp-neo4j-cypher>=0.5.3",
    "neo4j>=6.0.3",
    "pandas>=2.3.3",
    "python-dotenv>=1.2.1",
]

[project.scripts]
mcp-neo4j-ingest = "mcp_neo4j_ingest:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_neo4j_ingest"]