[project]
name = "mcp-neo4j-lexical-graph"
version = "0.1.0"
description = "MCP server for creating lexical graphs from PDF documents in Neo4j"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.3.0",
    "neo4j>=5.0.0",
    "litellm>=1.0.0",
    "pymupdf>=1.24.0",
    "tiktoken>=0.7.0",
    "pydantic>=2.0.0",
    "structlog>=24.0.0",
]

[project.scripts]
mcp-neo4j-lexical-graph = "mcp_neo4j_lexical_graph:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_neo4j_lexical_graph"]

