[project]
name = "mcp-neo4j-lexical-graph"
version = "0.2.0"
description = "MCP server for creating rich lexical graphs from PDFs in Neo4j. Supports multiple parse modes (pymupdf, docling, page-image), pluggable chunking strategies, document versioning, and structural verification."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["neo4j", "mcp", "pdf", "lexical-graph", "rag", "embeddings", "docling", "vector-search"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastmcp>=2.3.0",
    "neo4j>=5.0.0",
    "litellm>=1.0.0",
    "pymupdf>=1.24.0",
    "Pillow>=10.0.0",
    "tiktoken>=0.7.0",
    "pydantic>=2.0.0",
    "structlog>=24.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
docling = [
    "docling>=2.70.0",
]

[project.urls]
Homepage = "https://github.com/neo4j-field/neo4j-mcp-workspace-template"
Repository = "https://github.com/neo4j-field/neo4j-mcp-workspace-template"

[project.scripts]
mcp-neo4j-lexical-graph = "mcp_neo4j_lexical_graph:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_neo4j_lexical_graph"]
