[project]
name = "mcp-neo4j-proxy"
version = "0.1.0"
description = "Unified Neo4j MCP proxy — single entry point for all workspace servers"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.13.1",
]

[project.scripts]
mcp-neo4j-proxy = "mcp_neo4j_proxy:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_neo4j_proxy"]
